--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     .container .question {
         font-size: 26px;
-        margin-top: 20px;
+        margin-top: 80px;
     }
 
     .container .choices {
@@ -125,7 +125,7 @@
         font-size: 20px;
         font-weight: 600;
         padding: 20px 20px;
-        margin: 80px auto 0 auto;
+        margin: 100px auto 0 auto;
         background-color: rgb(55, 39, 101);
         color: #fff;
         border: none;
@@ -172,7 +172,7 @@
         border: 2px solid #f00;
         font-size: 24px;
         font-weight: 600;
-        padding: 80px;
+       margin: 100px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -243,6 +243,7 @@
 
         .container .question {
             font-size: 22px;
+            margin-top: 50px;
         }
 
         .choice {
@@ -251,6 +252,7 @@
 
         .question {
             font-size: .1rem;
+            margin:80px;
         }
 
         .timer {
