--- a/indexQuizonedirection.html
+++ b/indexQuizonedirection.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz One Direction In French</title>
+    <title>Quiz One Direction In frensh</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -300,8 +300,8 @@
         },
         {
             question: "Q12:ou Liam payne est-il mort ?",
-            choices: ["argentine", "france", "rio", "canada"],
-            answer: "argentine"
+            choices: [" Buenos Aires (argentine)", "france", "rio", "canada"],
+            answer: "  Buenos Aires (argentine)"
         },
         {
             question: "Q13:liam payne  avait quel age quand t-il mort ?",
