--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
         },
         {
             question: "Q12:ou Liam payne est-il mort ?",
-            choices: [" Buenos Aires (argentine)", "france", "rio", "canada"],
-            answer: "  Buenos Aires (argentine)"
+            choices: [" Buenos Aires (argentina)", "frensh", "rio", "canada"],
+            answer: "  Buenos Aires (argentina)"
         },
         {
             question: "Q13:liam payne  avait quel age quand t-il mort ?",
